@@ -1,3 +1,8 @@
+2006-11-12 Don Scorgie <DonScorgie@Blueyonder.co.uk>
+
+	* src/MainWindow.py:
+	Make export dialog work again (issue #29)
+
 2006-11-08 Don Scorgie <DonScorgie@Blueyonder.co.uk>
 
 	* src/utils.py:
